--- a/transition.html
+++ b/transition.html
@@ -3,27 +3,20 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>抽選中...</title>
+<title>抽選ページ</title>
 <style>
-  * {
-    box-sizing: border-box;
-  }
   body {
     margin: 0;
     padding: 80px 20px;
     text-align: center;
     font-family: 'Segoe UI', sans-serif;
     transition: all 0.5s ease;
-    opacity: 0;
-    animation: fadeIn 1.2s ease forwards;
-  }
-  @keyframes fadeIn {
-    to { opacity: 1; }
   }
   .spinner {
     width: 80px; height: 80px;
     border-radius: 50%;
     margin: 40px auto;
+    display: none;
     animation: spin 1s linear infinite, pulse 2s ease-in-out infinite;
     box-shadow: 0 0 15px rgba(255,255,255,0.4);
   }
@@ -40,98 +33,105 @@
     margin-top: 20px;
     min-height: 1.5em;
   }
-  /* --- Theme Styles --- */
-  .theme-A { background-color: #000; color: gold; }
-  .theme-A .spinner {
-    border: 12px solid #222;
-    border-top: 12px solid gold;
+  button {
+    font-size: 1.4rem;
+    padding: 12px 30px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    background-color: #0078d7;
+    color: white;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
   }
-  .theme-B { background-color: #f5f5f5; color: #333; }
-  .theme-B .spinner {
-    border: 12px solid #ddd;
-    border-top: 12px solid orange;
-  }
-  .theme-C { background-color: #111; color: #eee; }
-  .theme-C .spinner {
-    border: 12px solid #222;
-    border-top: 12px solid #999;
-  }
-  .theme-D { background-color: #fff9e6; color: #d60000; }
-  .theme-D .spinner {
-    border: 12px solid #ccc;
-    border-top: 12px solid #00bcd4;
-  }
-  .theme-E { background-color: #e0e0e0; color: #555; }
-  .theme-E .spinner {
-    border: 12px solid #aaa;
-    border-top: 12px solid #888;
-  }
-  .theme-F { background-color: #1a1a1a; color: #39ff14; }
-  .theme-F .spinner {
-    border: 12px solid #333;
-    border-top: 12px solid #ff00ff;
-  }
-  .theme-G { background-color: #f5e3c0; color: #990000; }
-  .theme-G .spinner {
-    border: 12px solid #b5651d;
-    border-top: 12px solid #ff0000;
-  }
-  .theme-H { background-color: #000; color: red; animation: glitch-bg 1s infinite; }
-  .theme-H .spinner {
-    border: 12px solid #400000;
-    border-top: 12px solid red;
-  }
-  .theme-I { background-color: #000; color: #00ffff; animation: glitch-bg 1s infinite; }
-  .theme-I .spinner {
-    border: 12px solid #002244;
-    border-top: 12px solid #00ffff;
-  }
-  @keyframes glitch-bg {
-    0%, 100% { filter: hue-rotate(0deg); }
-    50% { filter: hue-rotate(15deg); }
+  button:hover {
+    background-color: #005ea2;
   }
 </style>
 </head>
 <body>
-  <div class="spinner"></div>
+  <h1>抽選ページ</h1>
+  <div>
+    <select id="posterId" aria-label="ポスターID選択">
+      <option value="">ポスターIDを選択してください</option>
+      <option value="A">A</option>
+      <option value="B">B</option>
+      <option value="C">C</option>
+      <option value="D">D</option>
+      <option value="E">E</option>
+      <option value="F">F</option>
+      <option value="G">G</option>
+      <option value="H">H</option>
+      <option value="I">I</option>
+    </select>
+  </div>
+  <button id="startBtn" disabled>抽選開始</button>
+  <div class="spinner" id="spinner"></div>
   <div class="text" id="loadingText"></div>
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const id = urlParams.get("id");
-    const loadingTextMap = {
-      A: "ライバルは、全団体。抽選中...",
-      B: "肉を求める本能 抽選中...",
-      C: "それは、ただの串じゃない 抽選中...",
-      D: "ブチアゲろ、牛肉魂！ 抽選中...",
-      E: "もう一度食べたくなる、そんな味。 抽選中...",
-      F: "ネオンの中で炎が踊る… 抽選中...",
-      G: "香ばしさの極みへ… 抽選中...",
-      H: "神々の裁きが下る… 抽選中...",
-      I: "蒼き神の啓示… 抽選中..."
-    };
 
-    const textEl = document.getElementById("loadingText");
-    function typeText(text, el, delay = 50) {
-      el.textContent = "";
-      [...text].forEach((char, i) => {
-        setTimeout(() => {
-          el.textContent += char;
-        }, i * delay);
-      });
+<script>
+(() => {
+  const posterSelect = document.getElementById('posterId');
+  const startBtn = document.getElementById('startBtn');
+  const spinner = document.getElementById('spinner');
+  const loadingText = document.getElementById('loadingText');
+
+  // テーマ別メッセージ
+  const loadingTextMap = {
+    A: "ライバルは、全団体。抽選中...",
+    B: "肉を求める本能 抽選中...",
+    C: "それは、ただの串じゃない 抽選中...",
+    D: "ブチアゲろ、牛肉魂！ 抽選中...",
+    E: "もう一度食べたくなる、そんな味。 抽選中...",
+    F: "ネオンの中で炎が踊る… 抽選中...",
+    G: "香ばしさの極みへ… 抽選中...",
+    H: "神々の裁きが下る… 抽選中...",
+    I: "蒼き神の啓示… 抽選中..."
+  };
+
+  // 選択があればボタンを活性化
+  posterSelect.addEventListener('change', () => {
+    startBtn.disabled = !loadingTextMap[posterSelect.value];
+  });
+
+  function generateToken(length = 16) {
+    // ランダム英数字トークン生成
+    const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+    let token = '';
+    for(let i=0; i<length; i++) {
+      token += chars.charAt(Math.floor(Math.random() * chars.length));
+    }
+    return token;
+  }
+
+  startBtn.addEventListener('click', () => {
+    const id = posterSelect.value;
+    if (!loadingTextMap[id]) {
+      alert("有効なポスターIDを選択してください。");
+      return;
     }
 
-    if (!id || !loadingTextMap[id]) {
-      textEl.innerText = "無効なポスターIDです。";
-    } else {
-      document.body.classList.add(`theme-${id}`);
-      typeText(loadingTextMap[id], textEl);
-      localStorage.setItem(`gyumax_${id}`, 'true');
-      const isAtari = Math.random() < 0.3;
-      setTimeout(() => {
-        const nextUrl = isAtari ? `atari.html?id=${id}` : `hazure.html?id=${id}`;
-        window.location.href = nextUrl;
-      }, 3000);
-    }
-  </script>
+    // ボタンとセレクトを無効化し、スピナー表示・メッセージ表示
+    startBtn.disabled = true;
+    posterSelect.disabled = true;
+    spinner.style.display = "block";
+    loadingText.textContent = loadingTextMap[id];
+
+    // 抽選（30%で当たり）
+    const isAtari = Math.random() < 0.3;
+
+    // トークン生成
+    const token = generateToken();
+
+    // 3秒後に結果ページへ遷移（トークン付き）
+    setTimeout(() => {
+      const nextUrl = isAtari
+        ? `result.html?id=${id}&result=win&token=${encodeURIComponent(token)}`
+        : `result.html?id=${id}&result=lose&token=${encodeURIComponent(token)}`;
+      window.location.href = nextUrl;
+    }, 3000);
+  });
+})();
+</script>
 </body>
 </html>
