--- a/transition.html
+++ b/transition.html
@@ -1,82 +1,48 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>抽選ページ</title>
-<style>
-  body {
-    margin: 0;
-    padding: 80px 20px;
-    text-align: center;
-    font-family: 'Segoe UI', sans-serif;
-    transition: all 0.5s ease;
-  }
-  .spinner {
-    width: 80px; height: 80px;
-    border-radius: 50%;
-    margin: 40px auto;
-    display: none;
-    animation: spin 1s linear infinite, pulse 2s ease-in-out infinite;
-    box-shadow: 0 0 15px rgba(255,255,255,0.4);
-  }
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  @keyframes pulse {
-    0%, 100% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-  }
-  .text {
-    font-size: 1.4rem;
-    margin-top: 20px;
-    min-height: 1.5em;
-  }
-  button {
-    font-size: 1.4rem;
-    padding: 12px 30px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    background-color: #0078d7;
-    color: white;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-  }
-  button:hover {
-    background-color: #005ea2;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>抽選中...</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 80px 20px;
+      text-align: center;
+      font-family: 'Segoe UI', sans-serif;
+      transition: all 0.5s ease;
+    }
+    .spinner {
+      width: 80px; height: 80px;
+      border-radius: 50%;
+      margin: 40px auto;
+      animation: spin 1s linear infinite, pulse 2s ease-in-out infinite;
+      box-shadow: 0 0 15px rgba(255,255,255,0.4);
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
+    .text {
+      font-size: 1.4rem;
+      margin-top: 20px;
+      min-height: 1.5em;
+    }
+  </style>
 </head>
 <body>
-  <h1>抽選ページ</h1>
-  <div>
-    <select id="posterId" aria-label="ポスターID選択">
-      <option value="">ポスターIDを選択してください</option>
-      <option value="A">A</option>
-      <option value="B">B</option>
-      <option value="C">C</option>
-      <option value="D">D</option>
-      <option value="E">E</option>
-      <option value="F">F</option>
-      <option value="G">G</option>
-      <option value="H">H</option>
-      <option value="I">I</option>
-    </select>
-  </div>
-  <button id="startBtn" disabled>抽選開始</button>
-  <div class="spinner" id="spinner"></div>
-  <div class="text" id="loadingText"></div>
+  <div class="spinner"></div>
+  <div class="text" id="loadingText">抽選中...</div>
 
 <script>
 (() => {
-  const posterSelect = document.getElementById('posterId');
-  const startBtn = document.getElementById('startBtn');
-  const spinner = document.getElementById('spinner');
-  const loadingText = document.getElementById('loadingText');
+  const urlParams = new URLSearchParams(window.location.search);
+  const id = urlParams.get("id");
 
-  // テーマ別メッセージ
   const loadingTextMap = {
     A: "ライバルは、全団体。抽選中...",
     B: "肉を求める本能 抽選中...",
@@ -89,13 +55,20 @@
     I: "蒼き神の啓示… 抽選中..."
   };
 
-  // 選択があればボタンを活性化
-  posterSelect.addEventListener('change', () => {
-    startBtn.disabled = !loadingTextMap[posterSelect.value];
-  });
+  const textEl = document.getElementById("loadingText");
 
+  // テキストアニメーション（type風）
+  function typeText(text, el, delay = 50) {
+    el.textContent = "";
+    [...text].forEach((char, i) => {
+      setTimeout(() => {
+        el.textContent += char;
+      }, i * delay);
+    });
+  }
+
+  // トークン生成
   function generateToken(length = 16) {
-    // ランダム英数字トークン生成
     const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
     let token = '';
     for(let i=0; i<length; i++) {
@@ -104,33 +77,32 @@
     return token;
   }
 
-  startBtn.addEventListener('click', () => {
-    const id = posterSelect.value;
-    if (!loadingTextMap[id]) {
-      alert("有効なポスターIDを選択してください。");
-      return;
-    }
+  // 処理本体
+  if (!id || !loadingTextMap[id]) {
+    window.location.href = "error.html";
+    return;
+  }
 
-    // ボタンとセレクトを無効化し、スピナー表示・メッセージ表示
-    startBtn.disabled = true;
-    posterSelect.disabled = true;
-    spinner.style.display = "block";
-    loadingText.textContent = loadingTextMap[id];
+  typeText(loadingTextMap[id], textEl);
 
-    // 抽選（30%で当たり）
-    const isAtari = Math.random() < 0.3;
+  const storageKey = `gyumax_${id}`;
+  let result = localStorage.getItem(storageKey);
+  let isAtari;
 
-    // トークン生成
-    const token = generateToken();
+  if (result) {
+    isAtari = result === "win";
+  } else {
+    isAtari = Math.random() < 0.3;
+    localStorage.setItem(storageKey, isAtari ? "win" : "lose");
+  }
 
-    // 3秒後に結果ページへ遷移（トークン付き）
-    setTimeout(() => {
-      const nextUrl = isAtari
-        ? `result.html?id=${id}&result=win&token=${encodeURIComponent(token)}`
-        : `result.html?id=${id}&result=lose&token=${encodeURIComponent(token)}`;
-      window.location.href = nextUrl;
-    }, 3000);
-  });
+  const token = generateToken();
+
+  setTimeout(() => {
+    const resultStr = isAtari ? "win" : "lose";
+    const nextUrl = `result.html?id=${id}&result=${resultStr}&token=${encodeURIComponent(token)}`;
+    window.location.href = nextUrl;
+  }, 3000);
 })();
 </script>
 </body>
