--- a/seal.html
+++ b/seal.html
@@ -138,6 +138,6 @@
   <a href="#" class="btn disabled">戻る</a>
 
   <!-- シークレットスタンプ取得ボタン（意味深） -->
-  <a href="stamp.html?secret=true" class="btn secret" title="何かが始まる…">シークレットスタンプを取得</a>
+  <a href="stamp.html?secret=1" class="btn secret" title="何かが始まる…">シークレットスタンプを取得</a>
 </body>
 </html>
